partial mail creation

--- a/routes/notification/notificationType/constants/templates/footer.mustache
+++ b/routes/notification/notificationType/constants/templates/footer.mustache
@@ -1,4 +1,4 @@
-<p>If you do not satisfy with this request. Please contact us immediately at 
+<p>If you do not satisfy with this. Please contact us immediately at 
 <a href="topdoc.official22@gmail.com">topdoc.official22@gmail.com</a></p>
 
 	<p>Thank you,</p>
