changes in forget file

--- a/routes/notification/notificationType/constants/templates/forgetPassword.mustache
+++ b/routes/notification/notificationType/constants/templates/forgetPassword.mustache
@@ -5,8 +5,16 @@
 	<p>We have received a request to reset the password for your account. If you did not make this request, please ignore this email.</p>
 
 	<p>To reset your password, please click on the following link:</p>
+	<script> 
+			function clickAndDisable(link) { 
+					// disable subsequent clicks
+		 		link.onclick = function(event) {
+			 	event.preventDefault(); 
+			 } 
+		    }
+    </script> 
 
-<p><a href="{{resetLink}}">{{resetLink}}</a></p>
+<p><a href="{{resetLink}} onclick="clickAndDisable(this);">resetLink</a></p>
 
 
 	<p>This link will expire in {{expiryTime}}. If you do not reset your password before the link expires, you will need to request another reset link.</p>
