mail.js completed in notification module

--- a/routes/notification/notificationType/constants/templates/sessionDelay.mustache
+++ b/routes/notification/notificationType/constants/templates/sessionDelay.mustache
@@ -1,3 +1,5 @@
+<h1 style="text-align: center; color: #008CBA;">Appointment has been delayed</h1>
+
 <h1 >Hello {{name}},</h1> 
 
-	<p>Sorry to inform you that the session you have booked for consultation is delayed by your doctor.</p>
+<p>Sorry to inform you that the session you have booked for consultation is delayed by your doctor.</p>
