--- a/routes/notification/notificationType/constants/templates/forgetPassword.mustache
+++ b/routes/notification/notificationType/constants/templates/forgetPassword.mustache
@@ -1,20 +1,19 @@
-
-
+<h1 style="text-align: center; color: #008CBA;">Reset your password</h1>
 <h1 >Hello {{name}},</h1> 
 
-	<p>We have received a request to reset the password for your account. If you did not make this request, please ignore this email.</p>
+<p>We have received a request to reset the password for your account. If you did not make this request, please ignore this email.</p>
 
-	<p>To reset your password, please click on the following link:</p>
-	<script> 
-			function clickAndDisable(link) { 
-					// disable subsequent clicks
-		 		link.onclick = function(event) {
-			 	event.preventDefault(); 
-			 } 
-		    }
-    </script> 
+<p>To reset your password, please click on the following link:</p>
 
-<p><a href="{{resetLink}} onclick="clickAndDisable(this);">resetLink</a></p>
+  <p style="text-align: center;"><a href={{resetLink}} style="background-color: #008CBA;
+  border-radius: 3px;
+  color: #ffffff;
+  display: inline-block;
+  font-size: 16px;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;">Reset Link</a></p>
+  
 
 
-	<p>This link will expire in {{expiryTime}}. If you do not reset your password before the link expires, you will need to request another reset link.</p>
+<p>This link will expire once you click on it. If you do not reset your password once you click on the link, you will need to request another reset link.</p>
