--- a/routes/notification/notificationType/constants/templates/header.mustache
+++ b/routes/notification/notificationType/constants/templates/header.mustache
@@ -1,11 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Welcome to TopDoc 🩺</title>
+  <title>TopDoc team 🩺</title>
     <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <link rel = "stylesheet" href="mailStyle.css">
+         <style>
+         body {
+          font-family: Arial, sans-serif;
+        }
+        .container {
+          width: 850px;
+          margin: 0 auto;
+        }
+        .header {
+          background-color: #f2f2f2;
+          padding: 20px;
+          text-align: center;
+        }
+        .header img {
+          width: 100%;
+          height: 200px;
+        }
+        .content {
+          background-color: #ffffff;
+          padding: 20px;
+        }
+        .content h1 {
+          font-size: 36px;
+          margin-bottom: 20px;
+        }
+        .content p {
+          font-size: 18px;
+          line-height: 1.5;
+          margin-bottom: 20px;
+        }
+        .footer {
+          background-color: #f2f2f2;
+          padding: 20px;
+          text-align: center;
+          font-size: 14px;
+          color: #777777;
+        }
+        
+         </style>
   
 </head>
 <body>
@@ -13,5 +50,4 @@
             <div class="header">
               <img src="https://st3.depositphotos.com/2249091/13081/i/600/depositphotos_130811568-stock-photo-doctors-of-medicine-talking.jpg" alt="Logo">
             </div>
-            <div class="content"> 
-            
+            <div class="content">
