--- a/routes/notification/notificationType/constants/templates/sessionCancel.mustache
+++ b/routes/notification/notificationType/constants/templates/sessionCancel.mustache
@@ -1,6 +1,4 @@
-
+<h1 style="text-align: center; color: #008CBA;">Appointment has been cancelled</h1>
 <h1 >Hello {{name}},</h1> 
 
 	<p>Sorry to inform you that the session you have booked for consultation is cancelled by your doctor.</p>
-
-
